# Coursework

./: .env_pattern  README.md  pyproject.toml
data/: main_page.json  reports.json
src/: main_page.py  reports.py  search.py  services.py  views.py
tests/: test_main_page.py  test_reports.py  test_search.py  test_services.py
